2003-07-28  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* Added support for drawing outlines of filled polygons.

	* Added support for drawing filled polygons.

	* Added scrollbars also when working with marks only.

	* Added -a option to force square aspect ratio.

2003-07-09  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* Made postscript complient eps.

	* Added option to set user title to giv window through -title
	  option.

2003-07-06  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* Implemented marks tree window.

	* Implemented $marks_file command for referencing other marks
	files.

2003-06-26    <dov@imagic.weizmann.ac.il>

	* Made load image and load marks windows pop down after image load.

	* Fixed last directory problem on windows.

	* Bumped version to 0.3.5
	

2002-12-13  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* giv.c: Support for low contrast display, suitable for 
	binary images with marks.

	* giv.c: Added place holder for text mark support.

	* giv.c: Fixed critical bug that made readings of marks fail.
	

2002-05-29  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* giv.c: Added scrollbars.

	* giv.c: Disabled shrink wrap which doesn't work.

	* giv.c: Turned mark sizes into double.

2001-03-05  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* Release of version 0.1.
