@@ -1,3 +1,7 @@
+2003-11-03  Dov Grobgeld  <dov@imagic.weizmann.ac.il>
+
+	* Fixed bug in fitting scale to contents.
+
 2003-07-28  Dov Grobgeld  <dov@imagic.weizmann.ac.il>
 
 	* Added support for drawing outlines of filled polygons.
